2003-08-30  Alexandre Pigolkine <pigolkine@gmx.de>
	* ComponentEditor.cs
	* IUIService.cs				stubs added 

2003-03-31  Alan Tam <Tam@SiuLung.com>

	* UITypeEditor.cs: Removed because it shan't be here

2002-8-4  DennisHayes <dennish@raytek.com>

*  Started cheanglog

2002-8-4  DennisHayes <dennish@raytek.com>

* AnchorEditor.cs
* AxImporter.cs
* ComponentDocumentDesigner.cs
* ComponentEditorForm.cs
* Stubbed out

* ComponentTray.cs
* ControlDesigner.cs
* ComponentEditor.cs
* DocumentDesigner.cs
* EventsTab.cs
* FileNameEditor.cs
* IMenuEditorService.cs
* IUIService.cs
* IWindowsformsEditorService.cs
* MenusCommands.cs
* ParentControlDesigner.cs
* PropertyTab.cs
* ScrollableControlDesigner.cs
* SelectionRules.cs
* UITypeEditor.cs
* Class body defined only. No stubbs done.

* TODOAttribute.cs
* Used to mark unimplemented functions.

* System.Windows.Forms.Design.csproj
* System.Windows.Forms.Design.csproj.user
* AssemblyInfo.cs
* Needed for Visual Studio compile.



